[package]
name = "code_with_us"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0.3", features = ["mysql","chrono"] }
dotenvy = "0.15"
serde_json = "1.0"
actix-web = "4"

[[bin]]
name = "export_all_tables_to_json"
doc = false